@@ -54,8 +54,11 @@ module PublicSuffixService
     rule = RuleList.default.find(domain) || raise(DomainInvalid, "`#{domain}' is not a valid domain")
 
     left, right = rule.decompose(domain)
-    parts       = left.split(".")
+    if right.nil?
+      raise DomainNotAllowed, "Rule `#{rule.name}' doesn't allow `#{domain}'"
+    end
 
+    parts = left.split(".")
     # If we have 0 parts left, there is just a tld and no domain or subdomain
     # If we have 1 part  left, there is just a tld, domain and not subdomain
     # If we have 2 parts left, the last part is the domain, the other parts (combined) are the subdomain
